# rubik

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  beginner_cfop_solver.c  beginner_solver.c  draw.c  draw.h  hkociemba.c  hkociemba_optimal_solver.c  model.c  model.h  perf_test.sh  rubik.c  solver.h  solver_perf.c
resources/: MozillaTextFont.h
src/: cube.c  cube.h  draw.c  draw.h  model.c  model.h  rubik.c  solver_perf.c  solver_tester.c
src/solver/: async.h  barrier.h  beginner_cfop_solver.c  hkociemba.c  hkociemba_optimal_solver.c  solver.h  solver_beginner_cfop.c  solver_hkociemba_optimal.c
